--- a/config/cloudinary.yml
+++ b/config/cloudinary.yml
@@ -1,18 +1,18 @@
 development:
-  cloud_name: finelunch
-  api_key: '311987768461511'
-  api_secret: gEcGb2sHqndYAPBfQMyVqtSlgkw
+  cloud_name: <%= ENV['CLOUDINARY_NAME_DEV'] %>
+  api_key: <%= ENV['CLOUDINARY_API_KEY_DEV'] %>
+  api_secret: <%= ENV['CLOUDINARY_API_SECRET_DEV'] %>
   enhance_image_tag: true
   static_file_support: false
 production:
-  cloud_name: finelunch
-  api_key: '311987768461511'
-  api_secret: gEcGb2sHqndYAPBfQMyVqtSlgkw
+  cloud_name: <%= ENV['CLOUDINARY_NAME_PROD'] %>
+  api_key: <%= ENV['CLOUDINARY_API_KEY_PROD'] %>
+  api_secret: <%= ENV['CLOUDINARY_API_SECRET_PROD'] %>
   enhance_image_tag: true
   static_file_support: true
 test:
-  cloud_name: finelunch
-  api_key: '311987768461511'
-  api_secret: gEcGb2sHqndYAPBfQMyVqtSlgkw
+  cloud_name: <%= ENV['CLOUDINARY_NAME_TEST'] %>
+  api_key: <%= ENV['CLOUDINARY_API_KEY_TEST'] %>
+  api_secret: <%= ENV['CLOUDINARY_API_SECRET_TEST'] %>
   enhance_image_tag: true
   static_file_support: false
