--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -16,13 +16,12 @@ on:
 jobs:
   build: 
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        ruby-version: ['2.6', '2.7', '3.0']
     steps:
     - uses: actions/checkout@v1
     - name: Set up Ruby
       uses: actions/setup-ruby@v1
+      with: 
+        ruby-version: "2.7.3"
     - uses: actions/cache@v1
       with:
         path: vendor/bundle
