try ro fix flatpikr issue

--- a/.env
+++ b/.env
@@ -11,3 +11,5 @@ CLOUDINARY_API_SECRET_PROD: gEcGb2sHqndYAPBfQMyVqtSlgkw
 CLOUDINARY_NAME_TEST: finelunch
 CLOUDINARY_API_KEY_TEST: '311987768461511'
 CLOUDINARY_API_SECRET_TEST: gEcGb2sHqndYAPBfQMyVqtSlgkw
+
+RAILS_SERVE_STATIC_FILES=true
